# qumemo

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  package-lock.json  package.json
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: 404.html  follow.html  follow.txt  index.html  index.txt  manifest.json  memorization.html  memorization.txt
android/app/src/main/assets/web/_next/static/b1VwM15c05niu4KhQLICs/: _buildManifest.js
android/app/src/main/assets/web/_next/static/chunks/: 35e53860af3d4362.js  46af0186c7489237.js  4f5b6c9c939d2144.js  5059a959ae4a8a6c.css  5d887b41edd1c3f6.js  612c4b3ad659bb06.js  79feeced2e22bb83.js  7d4a86ac7bdf7130.js  9c1094627fe5f617.js  9e3a4f57eaa63ffc.js  (+12 more)
android/app/src/main/assets/web/data/timings/: 102.json  103.json  107.json  113.json  114.json  18.json  20.json  21.json  25.json  27.json  3.json  30.json  31.json  41.json  44.json  47.json  56.json  60.json  70.json  77.json  79.json  87.json  9.json  90.json  97.json  98.json
android/app/src/main/assets/web/data/timings-words/: 10.json  101.json  103.json  105.json  106.json  112.json  114.json  14.json  16.json  19.json  20.json  21.json  22.json  24.json  26.json  28.json  30.json  33.json  35.json  36.json  39.json  4.json  40.json  41.json  44.json  45.json  48.json  49.json  50.json  52.json  55.json  57.json  59.json  6.json  60.json  62.json  64.json  66.json  69.json  7.json  (+9 more)
android/app/src/main/assets/web/memorization/: review.html  review.txt  stats.html  stats.txt
android/app/src/main/java/com/qumemo/app/: AsrBridge.kt  MainActivity.kt  WhisperLib.kt
android/app/src/main/jni/: CMakeLists.txt  whisper_jni.c
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
public/data/timings/: 1.json  10.json  100.json  101.json  104.json  105.json  106.json  108.json  109.json  11.json  110.json  111.json  112.json  12.json  13.json  14.json  15.json  16.json  17.json  19.json  2.json  22.json  23.json  24.json  26.json  28.json  29.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  42.json  43.json  45.json  (+48 more)
public/data/timings-words/: 1.json  100.json  102.json  104.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  12.json  13.json  15.json  17.json  18.json  2.json  23.json  25.json  27.json  29.json  3.json  31.json  32.json  34.json  37.json  38.json  42.json  43.json  46.json  47.json  5.json  51.json  53.json  54.json  56.json  58.json  61.json  63.json  (+26 more)
scripts/: build-timings.ts
src/app/: fonts.ts  globals.css  layout.tsx  page.tsx
src/app/follow/: page.tsx
src/app/memorization/: page.tsx
src/app/memorization/review/: page.tsx
src/app/memorization/stats/: page.tsx
src/components/: AudioDownloadDialog.tsx  AudioPlayer.tsx  BilQuranSession.tsx  FollowAlongPage.tsx  MemorizationDashboard.tsx  NavigationSidebar.tsx  QuranPageViewer.tsx  RecitationTracker.tsx  ReviewSession.tsx  SetupWizard.tsx  VoiceRecorder.tsx
src/services/: asrBackends.ts  audioDownloadService.ts  audioService.ts  ayahTimingService.ts  bilQuranService.ts  followAlongService.ts  memorizationPlanService.ts  phonemeService.ts  quranDataService.ts  quranSearchIndex.ts  recitationMatcherService.ts  recitationTrackerService.ts  recordingService.ts  reviewQueueService.ts  sessionService.ts  spacedRepetitionService.ts  storageService.ts
src/types/: followAlong.ts  memorization.ts  quran.ts  recitation.ts
src/utils/: ayahUtils.ts  surahDetection.ts
src/utils/__tests__/: surahDetection.test.ts
tools/aligner/: .gitignore  FIX_SUMMARY.md  README.md  aligner.py  batch_align.py  build_dataset.py  eval_asr.py  eval_config.py  eval_detection.py  eval_report.py  eval_streaming.py  new_aligner.py  pyproject.toml  setup.sh  test_text_aware_alignment.py  validate_timings.py
tools/aligner/editor/: index.html  validate.html
tools/aligner/output/: 001_timings.json  001_timings_old.json  002_timings.json  009_timings.json  036_debug.json  036_test.json  038_timings.json  040_timings.json  042_timings.json  043_timings.json  044_timings.json  045_timings.json
tools/aligner/output_fixed/: 036_timings_fixed.json
tools/aligner/scripts/: comprehensive_validation.py  validate_muqattaat.py
tools/aligner/src/: __init__.py  alignment_validator.py  audio_processor.py  ctc_aligner.py  first_segment_classifier.py  output_formatter.py  phoneme_mapper.py  quran_index.py  segment_aligner.py  special_segments.py  text_analyzer.py  text_cleaner.py  text_matcher.py  utils.py  vad_processor.py  whisper_aligner.py  whisper_asr.py
tools/aligner/tests/: __init__.py  test_text_cleaner.py
tools/asr-server/: .gitignore  convert_model.py  pyproject.toml  run.sh  server.py  test_mic.py
