[project]
name = "quran-aligner"
version = "0.1.0"
description = "CTC forced alignment pipeline for Quran audio with Qaloon text"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "pydub>=0.25.1",
    "pyarabic>=0.6.15",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",
    "datasets>=2.19.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
cuda = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]
cpu = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
]

[project.scripts]
aligner = "aligner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "extra == 'cuda'" }
torchaudio = { index = "pytorch-cu124", marker = "extra == 'cuda'" }

